--- a/src/components/projectCard/_project-card.sass
+++ b/src/components/projectCard/_project-card.sass
@@ -84,6 +84,10 @@
         font-size: 16px
       &-mono-access-full, &-mono-access-limited
         font-size: 19px
+      &-mono-visiblity-public
+        font-size: 14px
+      &-mono-visiblity-private
+        font-size: 17px
 
   &__info
     position: relative
