--- a/src/pug/form-passport.pug
+++ b/src/pug/form-passport.pug
@@ -9,7 +9,7 @@ include ../components/mainFooter/_mainFooter
 block content
 
   .page-main
-    +mainHeader("Создание анкеты", 2, 2)
+    +mainHeader("Создание анкеты", 'forms', 2)
 
     form.main-body(action='/' method='post')
       .main-content(js-main-content-scroller)
