--- a/src/pug/project-tasks.pug
+++ b/src/pug/project-tasks.pug
@@ -9,7 +9,7 @@ include ../components/mainFooter/_mainFooter
 block content
 
   .page-main
-    +mainHeader("Создание проекта", true, 1)
+    +mainHeader("Создание проекта", 'projects', 1)
 
     form.main-body(action='/' method='post')
       .main-content(js-main-content-scroller)
