--- a/src/pug/project-questions.pug
+++ b/src/pug/project-questions.pug
@@ -18,16 +18,28 @@ block content
           .project-questions
             .__sidebar
               p.__sidebar-title Разработка интернет-магазина
-              .__sidebar-item.main(js-open-parent) Нужен ли вам маркетинг?
-                .__sidebar-item(js-open-parent) Укажите общий бюджет на маркетинг
-                  .__sidebar-item(js-open-parent) Требуется ли вам offline-маркетинг?
-                  .__sidebar-item(js-open-parent) Требуется ли вам интернет-маркетинг?
-                    .__sidebar-item.last(js-open-parent) Нужны ли вам работы над сайтом?
-                    .__sidebar-item.last(js-open-parent) Нужна ли работа с целевой аудиторией и мониторинг работы компании?
-                  .__sidebar-item(js-open-parent) Требуется ли вам комплексный маркетинг?
-                .__sidebar-item(js-open-parent) Укажите желаемое время реализации
-              .__sidebar-item.main(js-open-parent) Нужны ли вам услуги дизайна?
-              .__sidebar-item.main(js-open-parent) Нужны ли вам услуги программирования?
+              .__sidebar-item.main
+                a(href="#" js-open-parent) Нужен ли вам маркетинг?
+                .__sidebar-item
+                  a(href="#" js-open-parent) Укажите общий бюджет на маркетинг
+                  .__sidebar-item
+                    a(href="#" js-open-parent) Требуется ли вам offline-маркетинг?
+                    .__sidebar-item.last
+                      a(href="#" js-open-parent) Нужны ли вам работы над сайтом?
+                  .__sidebar-item
+                    a(href="#" js-open-parent) Требуется ли вам интернет-маркетинг?
+                    .__sidebar-item.last
+                      a(href="#" js-open-parent) Нужны ли вам работы над сайтом?
+                    .__sidebar-item.last
+                      a(href="#" js-open-parent) Нужна ли работа с целевой аудиторией и мониторинг работы компании?
+                  .__sidebar-item.last
+                    a(href="#" js-open-parent) Требуется ли вам комплексный маркетинг?
+                .__sidebar-item
+                  a(href="#" js-open-parent) Укажите желаемое время реализации
+              .__sidebar-item.main
+                a(href="#" js-open-parent) Нужны ли вам услуги дизайна?
+              .__sidebar-item.main
+                a(href="#" js-open-parent) Нужны ли вам услуги программирования?
             .__content
               .__progress
                 .__point(style="padding-left: 24%") 24%
