--- a/src/components/projectQuestions/_project-questions.sass
+++ b/src/components/projectQuestions/_project-questions.sass
@@ -11,70 +11,77 @@
       font-weight: 700
       margin: 0
     &-item
-      // margin: 11px 0 0 0
-      padding: 6px 0
       cursor: pointer
       padding-left: 20px
       position: relative
       display: none
       z-index: 3
-      &:hover
-        background: $colorBg
-        border-top-right-radius: 4px
-        border-bottom-right-radius: 4px
-        z-index: 2
+      margin-left: -20px
+      a
+        padding: 6px 10px 6px 0
+        display: inline-block
+        position: relative
+        &:after
+          position: absolute
+          left: -19px
+          top: 11px
+          width: 6px
+          height: 6px
+          border: 1px solid #A3ABC2
+          display: block
+          content: ''
+          transform: rotate(45deg)
+          border-left: none
+          border-top: none
+          transition: all .25s $ease
         &:before
-          opacity: 1
+          position: absolute
+          height: 100%
+          width: 200%
+          right: 100%
+          background: $colorBg
+          content: ''
+          display: block
+          top: 0
+          opacity: 0
+        &:hover
+          background: $colorBg
+          border-top-right-radius: 4px
+          border-bottom-right-radius: 4px
+          z-index: 2
+          &:before
+            opacity: 1
+      &:after
+        position: absolute
+        display: block
+        height: 0
+        width: 1px
+        left: 4px
+        top: 26px
+        background: $borderColor
+        content: ''
+        transition: all .25s $ease
       &.main
         display: block
+        margin-left: -20px
       &.last
         &:after
           display: none
-      &:after
-        position: absolute
-        left: 3px
-        top: 11px
-        width: 6px
-        height: 6px
-        border: 1px solid #A3ABC2
-        display: block
-        content: ''
-        transform: rotate(45deg)
-        border-left: none
-        border-top: none
-        transition: all .25s $ease
-      // &:after
-      //   position: absolute
-      //   display: block
-      //   height: 0
-      //   width: 1px
-      //   left: 6px
-      //   top: 26px
-      //   background: $borderColor
-      //   content: ''
-      //   transition: all .25s $ease
-      &:before
-        position: absolute
-        height: 100%
-        width: 100%
-        right: 99%
-        background: $colorBg
-        content: ''
-        display: block
-        top: 0
-        z-index: -1
-        opacity: 0
-
+        a
+          &:after
+            display: none
 
       > .project-questions__sidebar-item
         padding-left: 20px
+        margin-left: 0
         // border-left: 1px solid $borderColor
       &.is-open
-        // &:after
-        //   height: calc(100% - 16px)
         &:after
-          transform: rotate(-45deg)
-          top: 11px
+          height: calc(100% - 25px)
+        a
+          &:after
+            transform: rotate(-45deg)
+            top: 11px
   &__content
     padding: 40px 0 30px
     width: 100%
