--- a/src/pug/project-questions.pug
+++ b/src/pug/project-questions.pug
@@ -70,7 +70,7 @@ block content
                     label(for='r3')
                       span Затрудняюсь ответить
                 .__bottom
-                  button.btn.btn-outline Ответить
+                  button.btn.btn-outline.btn-padding Ответить
 
 
 
