--- a/src/sass/elements/_buttons.sass
+++ b/src/sass/elements/_buttons.sass
@@ -54,6 +54,10 @@ button
         color: $colorLight
         border-color: $borderColor
 
+  &-padding
+    padding-top: 14px
+    padding-bottom: 14px
+
 .btn-delete
   width: 16px
   height: 16px
