--- a/src/pug/shared/_layout.pug
+++ b/src/pug/shared/_layout.pug
@@ -19,5 +19,8 @@ html(lang="ru")
           block footer
             include ../../components/footer/_footer
 
+          block popups
+            include ../../components/popups/_popups
+
       block scripts
         include _scripts
