--- a/src/pug/project-access.pug
+++ b/src/pug/project-access.pug
@@ -24,7 +24,7 @@ block content
                       +svgMono('delete')
                     h3._heading Андрей Логвинов
                     ._select
-                      span._label Доступ:
+                      span Доступ:
                       span._selected Редактирование
 
                 ._column
@@ -33,7 +33,7 @@ block content
                       +svgMono('delete')
                     h3._heading Константин Константинопольский
                     ._select
-                      span._label Доступ:
+                      span Доступ:
                       span._selected Чтение
 
                 ._column
