--- a/src/pug/project-comments.pug
+++ b/src/pug/project-comments.pug
@@ -22,7 +22,7 @@ block content
               .comment-card._comment-card
                 ._header
                   ._title Алексей Чурков
-                  span._label Спортмастер
+                  span Спортмастер
                 p._caption Если выстроить в ряд случаи инверсий у Державина, то генеративная поэтика вращает абстракционизм.
                 span._date 15.04.2019, 12:12
               // end comment-card
@@ -31,7 +31,7 @@ block content
               .comment-card._comment-card
                 ._header
                   ._title Алевтина Китова
-                  span._label YAMI YAMI
+                  span YAMI YAMI
                 p._caption Диалектический характер неумеренно отталкивает апериодический угол курса.
                 span._date 15.04.2019, 12:12
               // end comment-card
@@ -40,7 +40,7 @@ block content
               .comment-card._comment-card
                 ._header
                   ._title Алексей Чурков
-                  span._label Спортмастер
+                  span Спортмастер
                 p._caption Если выстроить в ряд случаи инверсий у Державина, то генеративная поэтика вращает абстракционизм.
                 span._date 15.04.2019, 12:12
               // end comment-card
@@ -49,7 +49,7 @@ block content
               .comment-card._comment-card
                 ._header
                   ._title Алевтина Китова
-                  span._label YAMI YAMI
+                  span YAMI YAMI
                 p._caption Диалектический характер неумеренно отталкивает апериодический угол курса.
                 span._date 15.04.2019, 12:12
               // end comment-card
@@ -57,7 +57,7 @@ block content
             ._add
               form._form(action='#' method='post')
                 .ui-group
-                    textarea.ui-input._input(rows='6' name='' placeholder='Напишите свой комментарий...')
+                    textarea.ui-input(rows='6' name='' placeholder='Напишите свой комментарий...')
 
                 button.btn.btn-outline Отправить
 
