--- a/src/pug/project-roles.pug
+++ b/src/pug/project-roles.pug
@@ -19,7 +19,7 @@ block content
             .content-info._info
               h2._heading Не всем ролям назначены сотрудники
               ._content
-                span._label Осталось распределить:
+                span Осталось распределить:
                 ul.tags._tags
                   li._item Коммерческий директор
                   li._item Проект-менеджер
