--- a/src/pug/project-tasks.pug
+++ b/src/pug/project-tasks.pug
@@ -54,7 +54,7 @@ block content
                   p.project-tasks__item-title Обучить дизайнера
                 .project-tasks__item-right
                   p.project-tasks__item-name.red Дизайнер
-                  select.ui-input._input(js-select)
+                  select.ui-input(js-select)
                     option Выберите сотрудника
                     option(value='0') Cотрудник 1
                     option(value='1') Cотрудник 2
@@ -68,7 +68,7 @@ block content
                   p.project-tasks__item-description Описание задачи в несколько слов при его наличии
                 .project-tasks__item-right
                   p.project-tasks__item-name.purple IT-директор
-                  select.ui-input._input(js-select)
+                  select.ui-input(js-select)
                     option А. И. Константинопольский
                     option(value='0') Cотрудник 1
                     option(value='1') Cотрудник 2
@@ -81,7 +81,7 @@ block content
                   p.project-tasks__item-title Найти и заключить договор с подрядчиком
                 .project-tasks__item-right
                   p.project-tasks__item-name.purple IT-директор
-                  select.ui-input._input(js-select)
+                  select.ui-input(js-select)
                     option В. В. Загитов
                     option(value='0') Cотрудник 1
                     option(value='1') Cотрудник 2
@@ -94,7 +94,7 @@ block content
                     p.project-tasks__item-title Создать тендер
                   .project-tasks__item-right
                     p.project-tasks__item-name.green Коммерческий директор
-                    select.ui-input._input(js-select)
+                    select.ui-input(js-select)
                       option Выберите сотрудника
                       option(value='0') Cотрудник 1
                       option(value='1') Cотрудник 2
@@ -107,7 +107,7 @@ block content
                     p.project-tasks__item-title Выбрать подрячика
                   .project-tasks__item-right
                     p.project-tasks__item-name.purple IT-директор
-                    select.ui-input._input(js-select)
+                    select.ui-input(js-select)
                       option Выберите сотрудника
                       option(value='0') Cотрудник 1
                       option(value='1') Cотрудник 2
@@ -120,7 +120,7 @@ block content
                   p.project-tasks__item-title Выделить маркетинговый бюджет
                 .project-tasks__item-right
                   p.project-tasks__item-name.green Коммерческий директор
-                  select.ui-input._input(js-select)
+                  select.ui-input(js-select)
                     option С. И. Малахин
                     option(value='0') С. И. Малахин
                     option(value='1') С. И. Малахин
