--- a/src/pug/project-add.pug
+++ b/src/pug/project-add.pug
@@ -11,29 +11,29 @@ block content
   .page-main
     +mainHeader("Создание проекта", 'projects', 1)
 
-    form.main-body(action='/' method='post')
+    form.main-body(action='/' js-validate-form)
       .main-content(js-main-content-scroller)
         ._container.container
           ._inner
 
             .content-form._form
               .ui-group.-inline
-                label._label Название
+                label(for="name") Название
                   i.required *
                 ._content
-                  input.ui-input._input(type='text')
+                  input.ui-input(type='text' name="name" required)
 
               .ui-group.-inline
-                label._label Описание
+                label(for="description") Описание
                 ._content
-                  textarea.ui-input._input(rows='6')
+                  textarea.ui-input(rows='6' name="description")
 
               .ui-group.-inline
-                label._label Тип анкеты
+                label(for="type") Тип анкеты
                   i.required *
                 ._content
-                  select.ui-input._input(js-select)
-                    option Выберите из списка
+                  select.ui-input(js-select name="type" required)
+                    option(value='') Выберите из списка
                     option(value='0') Тип 1
                     option(value='1') Тип 2
                     option(value='2') Тип 3
