--- a/src/pug/shared/_layout.pug
+++ b/src/pug/shared/_layout.pug
@@ -19,6 +19,7 @@ html(lang="ru")
           block footer
             include ../../components/footer/_footer
 
+        if includePopups
           block popups
             include ../../components/popups/_popups
 
