--- a/src/components/projectQuestions/_project-questions.sass
+++ b/src/components/projectQuestions/_project-questions.sass
@@ -64,6 +64,52 @@
       &.main
         display: block
         margin-left: -20px
+      &.error
+        a
+          color: #EB5757
+          span.error
+            display: inline-block
+            width: 14px
+            height: 14px
+            background: url(../img/error.svg) center center no-repeat
+            content: ''
+            position: relative
+            margin-left: 5px
+            margin-bottom: -2px
+          span.hint
+            height: auto
+            top: 50%
+            transform: translateY(-50%)
+            display: inline-block
+            position: absolute
+            left: calc(100% - 15px)
+            background: $colorBg
+            color: $fontColor
+            padding: 10px
+            max-width: 110px
+            width: 110px
+            font-size: 12px
+            box-shadow: 0 0 5px rgba(#0B1C2D, 0.15)
+            &:before
+              position: absolute
+              width: 8px
+              height: 8px
+              display: block
+              content: ''
+              top: 50%
+              transform: translateY(-50%) rotate(45deg)
+              left: -4px
+              background: $colorBg
+              box-shadow: 0 0 5px rgba(#0B1C2D, 0.15)
+            &:after
+              width: 8px
+              background: $colorBg
+              height: 90%
+              top: 5%
+              content: ''
+              display: block
+              position: absolute
+              left: 0
       &.last
         &:after
           display: none
@@ -82,6 +128,21 @@
           &:after
             transform: rotate(-45deg)
             top: 11px
+    &-toggle
+      padding-bottom: 20px
+      border-bottom: 1px solid $borderColor
+      margin-bottom: 30px
+    &-input
+      margin-bottom: 5px
+      .ui-group
+        label
+          margin: 0
+          font-size: 12px
+          width: 100%
+          max-width: 100%
+          flex: 1
+        .ui-group__content
+          flex: 0
   &__content
     padding: 40px 0 30px
     width: 100%
